# live-audio-translator

./: .gitignore  Makefile  PROJECT_DEFINITION.md  README.md  install.sh  pyproject.toml  run.sh
src/: __init__.py  main.py
src/audio/: __init__.py  capture.py
src/gui/: main_window.py
src/storage/: __init__.py  sessions.py
src/transcription/: __init__.py  whisper_stt.py
src/translation/: __init__.py  argos_translator.py
