[project]
name = "live-audio-translator"
version = "0.1.0"
description = "Real-time audio translation between English and French"
readme = "PROJECT_DEFINITION.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "argostranslate",
    "PyQt6",
    "pyaudio",
    "numpy",
]

[project.scripts]
live-translator = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
